2000-09-09  Joseph S. Myers  <jsm28@cam.ac.uk>

	* battlestar/room.c (writedes): Process '=' in descriptions as
	meaning a literal '-'; from OpenBSD.
	* battlestar/dayfile.c (dayfile), battlestar/nightfile.c
	(nightfile): Spelling, punctuation and line length adjustments
	from OpenBSD.
	* tests/battlestar.out4, tests/battlestar.out5,
	tests/battlestar.out8: Update for changes in line length.

	* battlestar/com2.c (murder): Give an appropriate message for
	trying to kill non-OBJECT things (from OpenBSD); fixes "kill door"
	segfault.
	* com3.c (shoot), com4.c (take), com5.c (kiss), com6.c (ride),
	com7.c (fight), cypher.c (save): Wording, spelling, punctuation
	and line length adjustments from OpenBSD.
	* tests/battlestar.out5, tests/battlestar.out6: Update for changed
	wording.
	* tests/battlestar.in8, tests/battlestar.out8: New tests.
	* tests/battlestar.test: Update.

	* battlestar/words.c: Make spacing nicer and add missing
	initialisers.

	* NEWS, TODO: Update.

	* battlestar/battlestar.6, battlestar/battlestar.c,
	battlestar/com1.c, battlestar/com5.c, battlestar/cypher.c,
	battlestar/dayfile.c, battlestar/extern.h, battlestar/globals.c,
	battlestar/init.c, battlestar/nightfile.c, battlestar/room.c:
	Update from NetBSD CVS after merge.

2000-09-08  Joseph S. Myers  <jsm28@cam.ac.uk>

	* battlestar/battlestar.6: Don't refer to ~.  Suggested by Hubert
	Feyrer.

	* battlestar/extern.h, battlestar/globals.c, battlestar/init.c:
	Don't restrict length of username, use a string from strdup
	instead.  Make functions and arrays only used in init.c static.

2000-09-07  Joseph S. Myers  <jsm28@cam.ac.uk>

	* battlestar/extern.h: Put prototypes in alphabetical order.

	* fortune/datfiles/Makefile.bsd: Really update from NetBSD CVS.

	* battlestar/battlestar.6: Improvements from OpenBSD.
	* battlestar/extern.h: Define ROOMDESC.
	* battlestar/room.c (writedes): Use it.
	* battlestar/battlestar.c: From OpenBSD, make clearer and don't